--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -122,7 +122,7 @@
       <a href="admin-clients.html"><i class="fas fa-users"></i> Clients</a>
       <a href="admin-reports.html"><i class="fas fa-flag"></i> Reports</a>
       <a href="admin-history.html"><i class="fas fa-history"></i> History</a>
-      <a href="rides-history.html"><i class="fas fa-car"></i> Rides History</a>
+      <a href="admin-rides-history.html"><i class="fas fa-car"></i> Rides History</a>
     </div>
   </nav>
 
