--- a/Trip-summary.html
+++ b/Trip-summary.html
@@ -153,7 +153,7 @@ document.getElementById("pickupLocation").textContent = localStorage.getItem("pi
     function resetTrip() {
       localStorage.clear();
       alert("Trip reset.");
-      window.location.href = "Choose ride.html";
+      window.location.href = "client-details.html";
     }
 
     function goBack() {
