--- a/home.html
+++ b/home.html
@@ -181,7 +181,7 @@ padding: 15px 20px;
   <!-- Buttons -->
   <div class="btn-container">
     <button class="btn" onclick="window.location.href='choose-role.html'">Sign Up</button>
-    <button class="btn" onclick="window.location.href='login2.html'">Login</button>
+    <button class="btn" onclick="window.location.href='admin-client-login.html'">Login</button>
   </div>
 
   <!-- Voice Search Placeholder -->
